project is completed now and bug is fixed successfully

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -29,5 +29,16 @@
           </div>
         </div>
       </nav>
+
+      <div class="container my-5">
+        <div class="card" style="width: 100%;">
+            <div class="card-body">
+              <h5 class="card-title">Welcome to site</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <button class="btn btn-primary"><a href="/login" style="color:white; text-decoration: none;">Login</a></button>
+              <button class="btn btn-primary"><a href="/register" style="color: white; text-decoration:none;">Register</a></button>
+            </div>
+          </div>
+      </div>
 </body>
 </html>
